feat:add interface to manager the platform control-key 20250731